--- a/style/style.css
+++ b/style/style.css
@@ -9,3 +9,11 @@ td {
   padding: 10px;
   border: 1px solid black;
 }
+
+th {
+  background-color: rgb(0, 210, 0);
+  color: white;
+  font-weight: bold;
+  font-size: 18px;
+  text-align: center;
+}
