--- a/style/style.css
+++ b/style/style.css
@@ -29,3 +29,21 @@ td:nth-child(2) {
 td:nth-child(3) {
   color: red;
 }
+
+button {
+  margin: 20px;
+  padding: 20px;
+  background-color: rgb(0, 210, 0);
+  border: 1px solid white;
+  border-radius: 25%;
+}
+
+button:hover {
+  letter-spacing: 1px;
+  transition: 0.3s ease;
+}
+
+button a {
+  text-decoration: none;
+  color: white;
+}
