--- a/style/style.css
+++ b/style/style.css
@@ -35,15 +35,18 @@ button {
   padding: 20px;
   background-color: rgb(0, 210, 0);
   border: 1px solid white;
-  border-radius: 25%;
+  border-radius: 50px;
+  width: 15%;
 }
 
 button:hover {
   letter-spacing: 1px;
-  transition: 0.3s ease;
+  background-color: rgb(2, 95, 2);
+  transition: 0.5s ease-in-out;
 }
 
 button a {
   text-decoration: none;
   color: white;
+  font-size: 18px;
 }
